src/c/dynamics_c_structural.f90


    integer(int32) :: i
    type(beam_element_2d), allocatable, dimension(:) :: felements
    type(node), allocatable, dimension(:) :: fnodes
    real(real64), allocatable, dimension(:,:) :: kf

    if (ldk < gdof) error stop DYN_INVALID_INPUT_ERROR

    allocate(felements(n), fnodes(nn))
    do i = 1, n
        felements(i) = c_to_beam_element_2d(elements(i))
    end do
    do i = 1, nn
        fnodes(i) = c_to_node(nodes(i))
    end do

    if (rule > 0) then
        call assemble_static_system(gdof, felements, fnodes, kf, rule)
    else
        call assemble_static_system(gdof, felements, fnodes, kf)
    end if
    k(1:gdof,1:gdof) = kf
end subroutine

! ------------------------------------------------------------------------------
subroutine c_assemble_dynamic_system_beam_2d(gdof, n, elements, nn, nodes, &
    rule, m, ldm, k, ldk) bind(C, name = "c_assemble_dynamic_system_beam_2d")
    integer(c_int), intent(in), value :: gdof, n, nn, rule, ldm, ldk
    type(c_beam_element_2d), intent(in) :: elements(n)
    type(c_node), intent(in) :: nodes(nn)
    real(c_double), intent(out) :: m(ldm,gdof)
    real(c_double), intent(out) :: k(ldk,gdof)

    integer(int32) :: i
    type(beam_element_2d), allocatable, dimension(:) :: felements
    type(node), allocatable, dimension(:) :: fnodes
    real(real64), allocatable, dimension(:,:) :: mf, kf

    if (ldm < gdof) error stop DYN_INVALID_INPUT_ERROR
    if (ldk < gdof) error stop DYN_INVALID_INPUT_ERROR

    allocate(felements(n), fnodes(nn))
    do i = 1, n
        felements(i) = c_to_beam_element_2d(elements(i))
    end do
    do i = 1, nn
        fnodes(i) = c_to_node(nodes(i))
    end do

    if (rule > 0) then
        call assemble_dynamic_system(gdof, felements, fnodes, mf, kf, rule)
    else
        call assemble_dynamic_system(gdof, felements, fnodes, mf, kf)
    end if
    m(1:gdof,1:gdof) = mf
    k(1:gdof,1:gdof) = kf
end subroutine

! ------------------------------------------------------------------------------
subroutine c_assemble_static_system_beam_3d(gdof, n, elements, nn, nodes, &
    rule, k, ldk) bind(C, name = "c_assemble_static_system_beam_3d")
    integer(c_int), intent(in), value :: gdof, n, nn, rule, ldk
    type(c_beam_element_3d), intent(in) :: elements(n)
    type(c_node), intent(in) :: nodes(nn)
    real(c_double), intent(out) :: k(ldk,gdof)

    integer(int32) :: i
    type(beam_element_3d), allocatable, dimension(:) :: felements
    type(node), allocatable, dimension(:) :: fnodes
    real(real64), allocatable, dimension(:,:) :: kf

    if (ldk < gdof) error stop DYN_INVALID_INPUT_ERROR

    allocate(felements(n), fnodes(nn))
    do i = 1, n
        felements(i) = c_to_beam_element_3d(elements(i))
    end do
    do i = 1, nn
        fnodes(i) = c_to_node(nodes(i))
    end do

    if (rule > 0) then
        call assemble_static_system(gdof, felements, fnodes, kf, rule)
    else
        call assemble_static_system(gdof, felements, fnodes, kf)
    end if
    k(1:gdof,1:gdof) = kf
end subroutine

! ------------------------------------------------------------------------------
subroutine c_assemble_dynamic_system_beam_3d(gdof, n, elements, nn, nodes, &
    rule, m, ldm, k, ldk) bind(C, name = "c_assemble_dynamic_system_beam_3d")
    integer(c_int), intent(in), value :: gdof, n, nn, rule, ldm, ldk
    type(c_beam_element_3d), intent(in) :: elements(n)
    type(c_node), intent(in) :: nodes(nn)
    real(c_double), intent(out) :: m(ldm,gdof)
    real(c_double), intent(out) :: k(ldk,gdof)

    integer(int32) :: i
    type(beam_element_3d), allocatable, dimension(:) :: felements
    type(node), allocatable, dimension(:) :: fnodes
    real(real64), allocatable, dimension(:,:) :: mf, kf

    if (ldm < gdof) error stop DYN_INVALID_INPUT_ERROR
    if (ldk < gdof) error stop DYN_INVALID_INPUT_ERROR

    allocate(felements(n), fnodes(nn))
    do i = 1, n
        felements(i) = c_to_beam_element_3d(elements(i))
    end do
    do i = 1, nn
        fnodes(i) = c_to_node(nodes(i))
    end do

    if (rule > 0) then
        call assemble_dynamic_system(gdof, felements, fnodes, mf, kf, rule)
    else
        call assemble_dynamic_system(gdof, felements, fnodes, mf, kf)
    end if
    m(1:gdof,1:gdof) = mf
    k(1:gdof,1:gdof) = kf
end subroutine

! ------------------------------------------------------------------------------
subroutine c_apply_boundary_conditions_mtx(n, nbc, gdof, x, ldx, rst, ldr) &
    bind(C, name = "c_apply_boundary_conditions_mtx")
    integer(c_int), intent(in), value :: n, nbc, ldx, ldr
    integer(c_int), intent(inout) :: gdof(nbc)
    real(c_double), intent(in) :: x(ldx,n)
    real(c_double), intent(out) :: rst(ldr, n - nbc)

    integer(int32), allocatable, dimension(:) :: fgdof
    real(real64), allocatable, dimension(:,:) :: frst

    if (ldx < n) error stop DYN_INVALID_INPUT_ERROR
    if (ldr < n - nbc) error stop DYN_INVALID_INPUT_ERROR

    fgdof = gdof
    frst = apply_boundary_conditions(fgdof, x(1:n,1:n))
    gdof = fgdof
    rst(1:n-nbc,1:n-nbc) = frst
end subroutine

! ------------------------------------------------------------------------------
subroutine c_apply_boundary_conditions_vec(n, nbc, gdof, x, rst) &
    bind(C, name = "c_apply_boundary_conditions_vec")
    integer(c_int), intent(in), value :: n, nbc
    integer(c_int), intent(inout) :: gdof(nbc)
    real(c_double), intent(in) :: x(n)
    real(c_double), intent(out) :: rst(n - nbc)

    integer(int32), allocatable, dimension(:) :: fgdof
    real(real64), allocatable, dimension(:) :: frst

    fgdof = gdof
    frst = apply_boundary_conditions(fgdof, x)
    gdof = fgdof
    rst = frst
end subroutine

! ------------------------------------------------------------------------------
subroutine c_restore_constrained_values_dense(nred, nbc, gdof, x, rst) &
    bind(C, name = "c_restore_constrained_values_dense")
    integer(c_int), intent(in), value :: nred, nbc
    integer(c_int), intent(inout) :: gdof(nbc)
    real(c_double), intent(in) :: x(nred)
    real(c_double), intent(out) :: rst(nred + nbc)

    integer(int32), allocatable, dimension(:) :: fgdof
    real(real64), allocatable, dimension(:) :: frst

    fgdof = gdof
    frst = restore_constrained_values(fgdof, x)
    gdof = fgdof
    rst = frst
end subroutine

! ------------------------------------------------------------------------------
subroutine c_apply_displacement_constraint_dense(dof, val, n, k, ldk, f) &
    bind(C, name = "c_apply_displacement_constraint_dense")
    integer(c_int), intent(in), value :: dof, n, ldk
    real(c_double), intent(in), value :: val
    real(c_double), intent(inout) :: k(ldk,n)
    real(c_double), intent(inout) :: f(n)

    if (ldk < n) error stop DYN_INVALID_INPUT_ERROR

    call apply_displacement_constraint(dof, val, k(1:n,1:n), f)
end subroutine

! ------------------------------------------------------------------------------
subroutine c_solve_static_system_dense(n, k, ldk, f, u) &
    bind(C, name = "c_solve_static_system_dense")
    integer(c_int), intent(in), value :: n, ldk
    real(c_double), intent(in) :: k(ldk,n)
    real(c_double), intent(in) :: f(n)
    real(c_double), intent(out) :: u(n)

    if (ldk < n) error stop DYN_INVALID_INPUT_ERROR

    u = solve_static_system(k(1:n,1:n), f)
end subroutine

! ------------------------------------------------------------------------------

end module
